--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@primevue/themes": "^4.0.7",
     "core-js": "^3.8.3",
+    "primevue": "^4.0.7",
     "vue": "^3.2.13"
   },
   "devDependencies": {
