--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@primevue/themes": "^4.0.7",
     "core-js": "^3.8.3",
+    "primeicons": "^7.0.0",
     "primevue": "^4.0.7",
     "vue": "^3.2.13"
   },
