give a bit of a lighting to the design of the HomeView

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "core-js": "^3.8.3",
     "primeicons": "^7.0.0",
     "primevue": "^4.0.7",
+    "swipe": "^1.7.7",
+    "swiper": "^11.1.14",
     "vue": "^3.2.13",
     "vue-router": "^4.4.5"
   },
