--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.8.3",
     "primeicons": "^7.0.0",
     "primevue": "^4.0.7",
+    "vee-validate": "^4.13.2",
     "vue": "^3.2.13",
     "vue-router": "^4.4.5"
   },
