add vee validation plugin and implement more good practices from the Vue official doc

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@primevue/themes": "^4.0.7",
     "core-js": "^3.8.3",
     "primeicons": "^7.0.0",
